--- a/package.json
+++ b/package.json
@@ -4,14 +4,24 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "prepare": "husky",
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
+  "lint-staged": {
+    "*.{js,ts,jsx,tsx}": [
+      "eslint . --fix --max-warnings=0"
+    ],
+    "*.{js,ts,jsx,tsx,css,scss,json}": [
+      "prettier --write"
+    ]
+  },
   "dependencies": {
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "reset-css": "^5.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
@@ -22,6 +32,9 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.11.0",
+    "husky": "^9.1.6",
+    "lint-staged": "^15.2.10",
+    "prettier": "^3.3.3",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.11.0",
     "vite": "^5.4.10"
